--- a/image-transform.ipynb
+++ b/image-transform.ipynb
@@ -18,9 +18,9 @@
     "import pylab\n",
     "import json\n",
     "\n",
-    "im_path = \"/home/u1/mec0104/Documents/Root AI/Merging datasets/AIRootsPNG/results_1/merged/images\" #path to current im folder\n",
-    "cropped_path = \"./cropped_im\" #path to cropped im folder \n",
-    "resized_path = \"./resized_im\" #path to resized im folder "
+    "im_path = \"\" #path to current im folder\n",
+    "cropped_path = \"\" #path to cropped im folder \n",
+    "resized_path = \"\" #path to resized im folder "
    ]
   },
   {
