--- a/image-transform.ipynb
+++ b/image-transform.ipynb
@@ -18,9 +18,9 @@
     "import pylab\n",
     "import json\n",
     "\n",
-    "im_path = \"/home/u1/mec0104/Documents/Root AI/Merging datasets/AIRootsPNG/results_1/merged/images\" #path to current im folder\n",
-    "cropped_path = \"./cropped_im\" #path to cropped im folder \n",
-    "resized_path = \"./resized_im\" #path to resized im folder "
+    "im_path = \"\" #path to current im folder\n",
+    "cropped_path = \"\" #path to cropped im folder \n",
+    "resized_path = \"\" #path to resized im folder "
    ]
   },
   {
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coco_annotation_file_path = \"/home/u1/mec0104/Documents/Root AI/Merging datasets/AIRootsPNG/results_1/merged/annotations/merged.json\" #path to annotation folder \n",
+    "coco_annotation_file_path = \"\" #path to annotation folder \n",
     "coco_annotations = COCO(annotation_file = coco_annotation_file_path)\n",
     "cat_ids = coco_annotations.getCatIds()\n",
     "print('COCO category ids:')\n",
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_file = open(\"./transformed_anns.json\", \"w+\")\n",
+    "result_file = open(\"\", \"w+\")\n",
     "json.dump(data, result_file, indent = 4, sort_keys= True)"
    ]
   },
