--- a/image-transform.ipynb
+++ b/image-transform.ipynb
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_file = open(\"\", \"w+\") #path to transformed coco annotations file\n",
+    "result_file = open(\"\", \"w+\") #path to transformed annotations file\n",
     "json.dump(data, result_file, indent = 4, sort_keys= True)"
    ]
   },
